--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,9 @@ jobs:
           REMOTE_USER: ${{secrets.DO_USER}}
         run: |
           mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh -i "$SSH_PRIVATE_KEY" $REMOTE_USER@$REMOTE_HOST "
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ket
+          chmod 600 ~/.ssh/id_ket
+          ssh -i "~/.ssh/id_ket" $REMOTE_USER@$REMOTE_HOST "
             cd /var/www/html/your-laravel-app &&
             git pull origin main &&
             php artisan migrate --force &&
