--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ket
           chmod 600 ~/.ssh/id_ket
-          ssh -i "~/.ssh/id_ket" $REMOTE_USER@$REMOTE_HOST "
+          ssh -i "~/.ssh/id_ket" root@46.101.122.148 "
             cd /var/www/html/your-laravel-app &&
             git pull origin main &&
             php artisan migrate --force &&
